[tool.poetry]
name = "telegram-work-bot"
version = "0.1.0"
description = ""
authors = ["Sorokin Vadym <s57111702@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
aiogram = "^2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
